# Compigra

./: .gitignore  .gitmodules  CMakeLists.txt  DATE25.md  README.md  run_Compigra.sh  runner_compile.sh
benchmarks/: memory_config.json
benchmarks/BitCount/: BitCount.c  BitCount1_loop_graph.dot  a.out  bitcount.c  instructions_2x2.csv
benchmarks/BitCount/2x2/: out100_raw.sat  out10_raw.sat  out11_raw.sat  out12_raw.sat  out13_raw.sat  out14_grid.sat  out14_raw.sat  out15_raw.sat  out16_raw.sat  out17_raw.sat  out18_raw.sat  out19_raw.sat  out1_raw.sat  out20_raw.sat  out21_raw.sat  out22_raw.sat  out23_grid.sat  out23_raw.sat  out24_raw.sat  out25_raw.sat  out26_raw.sat  out27_raw.sat  out28_raw.sat  out29_raw.sat  out2_raw.sat  out30_raw.sat  out31_raw.sat  out32_raw.sat  out33_raw.sat  out34_raw.sat  out35_raw.sat  out36_raw.sat  out37_raw.sat  out38_raw.sat  out39_raw.sat  out3_raw.sat  out40_raw.sat  out41_raw.sat  out42_raw.sat  out43_raw.sat  (+65 more)
benchmarks/BitCount/3x3/: NoOptim_out.sat  NoOptim_out_grid.sat  out.sat  out1.sat  out100_raw.sat  out10_raw.sat  out11_grid.sat  out11_raw.sat  out12.sat  out12_raw.sat  out13_raw.sat  out14_raw.sat  out15_raw.sat  out16.sat  out16_grid.sat  out16_raw.sat  out17_raw.sat  out18_raw.sat  out19_raw.sat  out1_grid.sat  out1_raw.sat  out20_raw.sat  out21_raw.sat  out22_raw.sat  out23_raw.sat  out24_raw.sat  out25_raw.sat  out26_raw.sat  out27_raw.sat  out28_raw.sat  out29_raw.sat  out2_raw.sat  out30_raw.sat  out31_raw.sat  out32_raw.sat  out33_raw.sat  out34_raw.sat  out35_raw.sat  out36_raw.sat  out37_raw.sat  (+73 more)
benchmarks/BitCount/4x4/: NoOptim_out.sat  NoOptim_out_grid.sat  out.sat  out0.sat  out0_raw.sat  out1.sat  out10.sat  out100.sat  out100_grid.sat  out100_raw.sat  out10_grid.sat  out10_raw.sat  out11_grid.sat  out11_raw.sat  out12.sat  out12_raw.sat  out13_raw.sat  out14.sat  out14_grid.sat  out14_raw.sat  out15.sat  out15_grid.sat  out15_raw.sat  out16.sat  out16_grid.sat  out16_raw.sat  out17.sat  out17_grid.sat  out17_raw.sat  out18.sat  out18_grid.sat  out18_raw.sat  out19.sat  out19_grid.sat  out19_raw.sat  out1_raw.sat  out2.sat  out20.sat  out20_grid.sat  out20_raw.sat  (+242 more)
benchmarks/BitCount/IR/: cf.mlir  cf_opt.mlir  cgra.mlir  cgra_graph.mlir  hardware.mlir  llvm.ll  llvm.mlir  sat.mlir  scf.mlir
benchmarks/DotProduct/: DotProduct.c
benchmarks/DotProduct/12x12/: NoOptim_out.sat  NoOptim_out_grid.sat  out.sat  out_grid.sat  out_raw.sat
benchmarks/DotProduct/2x2/: NoOptim_out.sat  NoOptim_out_grid.sat  out.sat  out_grid.sat  out_raw.sat
benchmarks/DotProduct/3x3/: NoOptim_out.sat  NoOptim_out_grid.sat  out.sat  out_grid.sat  out_raw.sat
benchmarks/DotProduct/4x4/: NoOptim_out.sat  NoOptim_out_grid.sat  (+3 more)
benchmarks/FIR/: FIR.c
benchmarks/GSM/: GSM.c  GSM.ll  GSM1_constants  GSM1_livein_edges  GSM1_liveinnodes  GSM1_loop_graph.dot  GSM1_nodes  llvm.ll
benchmarks/ReverseBits/: ReverseBits.c  Reverse_bits.c
benchmarks/SHA1/: SHA1.c  SHA1.ll  SHA11_loop_graph.dot
benchmarks/SHA2/: SHA2.c
benchmarks/StringSearch/: StringSearch.c  StringSearch1_constants  StringSearch1_edges  StringSearch1_livein_edges  StringSearch1_liveinnodes  StringSearch1_loop_graph.dot  StringSearch1_nodes
benchmarks/bicg/: bicg.c
benchmarks/conv1d/: conv1d.c
benchmarks/conv2d/: conv2d.c
benchmarks/conv3d/: conv3d.c
benchmarks/gemm/: gemm.c
benchmarks/gsm/: gsm.c  out_4_nodes
benchmarks/isqrt/: a.out  isqrt.c
benchmarks/kernel_2mm/: kernel_2mm.c
benchmarks/kernel_3mm/: kernel_3mm.c
benchmarks/sha_transform/: sha_transform.c
benchmarks/symm/: symm.c
include/: InitAllDialects.h  InitAllPasses.h
include/compigra/: CMakeLists.txt  CfFixIndexWidth.h  Cgra.td  CgraDialect.h  CgraDialect.td  CgraInterfaces.h  CgraInterfaces.td  CgraOps.h  CgraOps.td  Passes.h  Passes.td  ScfFixIndexWidth.h
include/compigra/ASMGen/: ASMGenTempCGRA.h  CMakeLists.txt  DiscoASM.h  FastASMGenTempCGRA.h  InterferenceGraphCreation.h  OpenEdgeASM.h  Passes.h  Passes.td
include/compigra/Conversion/: CMakeLists.txt  CfToCgraConversion.h  LLVMToCgraConversion.h  Passes.h  Passes.td  SCFToCFConversion.h
include/compigra/Passes/: CMakeLists.txt  CfFixIndexWidth.h  CfMapToFullPredict.h  CfReduceBranches.h  LLVMToCgraConversion.h  Passes.h  Passes.td
include/compigra/Passes/SatMapItDATE2023InputGen/: PrintSatMapItDAG.h
include/compigra/Scheduler/: BasicBlockILPModel.h  BasicBlockOpAssignment.h  KernelSchedule.h  ModuloScheduleAdapter.h  TemporalCGRAScheduler.h
include/compigra/Support/: InterferenceGraphCreation.h  OpenEdgeASM.h  Utils.h
include/compigra/Transforms/: AffineExploitGemm.h  CMakeLists.txt  CfFixIndexWidth.h  CfFuseLoopHeadBody.h  CfMapToFullPredict.h  CfMergeIfToSelect.h  CfReduceBranches.h  CgraFitToOpenEdge.h  Passes.h  Passes.td
include/compigra/Transforms/SatMapItDATE2023InputGen/: PrintSatMapItDAG.h
lib/: CMakeLists.txt
lib/compigra/: CMakeLists.txt  CfFixIndexWidth.cpp  CgraDialect.cpp  CgraOps.cpp  ScfFixIndexWidth.cpp
lib/compigra/ASMGen/: ASMGenTempCGRA.cpp  CMakeLists.txt  FastASMGenTempCGRA.cpp  InterferenceGraphCreation.cpp  OpenEdgeASM.cpp
lib/compigra/Conversion/: CMakeLists.txt  CfToCgraConversion.cpp  LLVMToCgraConversion.cpp  ScfToCFConversion.cpp
lib/compigra/Passes/: CMakeLists.txt  CfFixIndexWidth.cpp  CfMapToFullPredict.cpp  CfReduceBranches.cpp  LLVMToCgraConversion.cpp
lib/compigra/Passes/SatMapItDATE2023InputGen/: CMakeLists.txt  PrintSatMapItDAG.cpp
lib/compigra/Scheduler/: BasicBlockILPModel.cpp  BasicBlockOpAssignment.cpp  CMakeLists.txt  ModuloScheduleAdapter.cpp  OpenEdgeScheduler.cpp  TemporalCGRAScheduler.cpp
lib/compigra/Support/: CMakeLists.txt  InterferenceGraphCreation.cpp  OpenEdgeASM.cpp  Utils.cpp
lib/compigra/Transforms/: AffineExploitGemm.cpp  CMakeLists.txt  CfFixIndexWidth.cpp  CfFuseLoopHeadBody.cpp  CfMapToFullPredict.cpp  CfMergeIfToSelect.cpp  CfReduceBranches.cpp  CgraFitToOpenEdge.cpp
lib/compigra/Transforms/SatMapItDATE2023InputGen/: CMakeLists.txt  PrintSatMapItDAG.cpp
tools/: CMakeLists.txt
tools/compigra-opt/: CMakeLists.txt  compigra-opt.cpp
(+273 files in other folders)
