add_compigra_dialect_library(MLIRCgra
CgraDialect.cpp
CgraOps.cpp

ADDITIONAL_HEADER_DIRS
${PROJECT_SOURCE_DIR}/include/compigra
${PROJECT_BINARY_DIR}/include/compigra

DEPENDS
MLIRCgraEnumsIncGen
MLIRCgraAttributesIncGen
MLIRCgraInterfacesIncGen

LINK_LIBS PUBLIC
MLIRIR
MLIRFuncDialect
MLIRLLVMDialect
MLIRSupport
MLIRMemRefDialect
MLIROpenMPDialect
MLIRAffineDialect
MLIRSCFTransforms
)

add_subdirectory(Transforms)
add_subdirectory(Conversion)
add_subdirectory(ASMGen)
add_subdirectory(Scheduler)