add_compigra_library(MLIRCompigraTransforms
AffineExploitGemm.cpp
CfFixIndexWidth.cpp
CfMergeIfToSelect.cpp
CfFuseLoopHeadBody.cpp
CfReduceBranches.cpp
CgraFitToOpenEdge.cpp

ADDITIONAL_HEADER_DIRS
${PROJECT_SOURCE_DIR}/include/compigra

DEPENDS
CompigraTransformsIncGen

LINK_LIBS PUBLIC
MLIRIR
MLIRMemRefDialect
MLIRArithDialect
)

add_subdirectory(SatMapItDATE2023InputGen)